--- a/style.css
+++ b/style.css
@@ -25,21 +25,45 @@ body, div, a {
     padding: 0 5px;
 }
 
+#radix {
+    width: 310px;
+    height: 60px;
+}
+
+#radix a{
+    display: block;
+    width: 60px;
+    height: 45px;
+    padding-top: 5px;
+    float: left;
+    color: black;
+    font-size: 30px;
+    text-align: center;
+    margin: 5px 8px;
+	background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC));
+	background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
+	border-radius: 10px;
+}
 #numbers, #operators {
 	margin: auto;	
+}
+
+#numbers {
+    width: 240px;
+    float: left;
 }
 
 #operators a {
 	display: block;
 	width: 45px;
-	height: 45px;
-	float: left;
+	height: 50px;
+	float: right;
 	text-decoration: none;
 	color: black;
 	text-align: center;
 	font-size: 39px;
 	padding: 2px;
-	margin: 5px 6px;
+	margin: 5px 10px;
 	background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC));
 	background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
 	border-radius: 10px;
@@ -55,7 +79,7 @@ body, div, a {
 	text-align: center;
 	font-size: 32pt;
 	padding: 10px;
-	margin: 5px 15px;
+	margin: 5px 5px;
 	background: -webkit-gradient(linear, left top, left bottom, from(#EDEDED), to(#DCDCDC));
 	background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
 	border-radius: 10px;
