Add .gitingore and new buttons, beautify everything.

--- a/style.css
+++ b/style.css
@@ -1,41 +1,43 @@
-body, div, a {
-    padding:0;
-    margin:0;
-    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
+body,
+div,
+a {
+    padding: 0;
+    margin: 0;
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
 }
 
 a {
     text-align: center;
     margin: 5px;
-	background: -webkit-gradient(linear, left top, left bottom, from(#D72D72), to(#CA537F));
-	background: -moz-linear-gradient(top, #D72D72, #CA537F);
-	border-radius: 10px;
+    background: -webkit-gradient(linear, left top, left bottom, from(#d72d72), to(#ca537f));
+    background: -moz-linear-gradient(top, #EDEDED, #DCDCDC);
+    border-radius: 10px;
 }
 
-a:not(total){
-    color: #EFCCD9;
+a:not(total) {
+    color: #efccd9;
 }
 
-a:hover{
-    background: -webkit-gradient(linear, left top, left bottom, from(#C32C6A), to(#C54977));
-    background: -moz-linear-gradient(top,  #C32C6A,  #C54977); 
+a:hover {
+    background: -webkit-gradient(linear, left top, left bottom, from(#c32c6a), to(#c54977));
+    background: -moz-linear-gradient(top, #DCDCDC, #EDEDED);
 }
 
 #calculator {
-	background-color: #EEBCB4;
-	width: 310px;
-	height: 460px;
-	border: 3px black solid;
-	margin: 10px auto;
-	padding: 5px;
-	border-radius: 10px;
+    background-color: #eebcb4;
+    width: 310px;
+    height: 630px;
+    border: 3px black solid;
+    margin: 10px auto;
+    padding: 5px;
+    border-radius: 10px;
 }
 
 #total {
     height: 70px;
     width: 300px;
-    margin:auto;
-    background-color:white;
+    margin: auto;
+    background-color: white;
     margin-bottom: 5px;
     text-align: right;
     font-size: 60px;
@@ -47,18 +49,18 @@ a:hover{
     height: 60px;
 }
 
-#radix a{
+#radix a {
     display: block;
     width: 60px;
     height: 45px;
     padding-top: 5px;
     float: left;
     font-size: 30px;
-    text-align: center;
-    margin: 5px 8px;
 }
-#numbers, #operators {
-	margin: auto;	
+
+#numbers,
+#operators {
+    margin: auto;
 }
 
 #numbers {
@@ -67,26 +69,72 @@ a:hover{
 }
 
 #operators a {
-	display: block;
-	width: 45px;
-	height: 50px;
-	float: right;
-	text-decoration: none;
-	text-align: center;
-	font-size: 39px;
-	padding: 2px;
-	margin: 5px 10px;
+    display: block;
+    width: 45px;
+    height: 50px;
+    float: right;
+    text-decoration: none;
+    text-align: center;
+    font-size: 39px;
+    padding: 2px;
+    margin: 5px 10px;
 }
 
 #numbers a {
-	display: block;
-	width: 50px;
-	height: 50px;
-	float: left;
-	text-decoration: none;
-	text-align: center;
-	font-size: 32pt;
-	padding: 10px;
-	margin: 5px;
+    display: block;
+    width: 50px;
+    height: 50px;
+    float: left;
+    text-decoration: none;
+    text-align: center;
+    font-size: 32pt;
+    padding: 10px;
 }
 
+#rad {
+    height: 100px;
+    width: 45px;
+    background-color: white;
+    text-align: left;
+    font-size: 20px;
+    padding: 0 5px;
+    float: left;
+    line-height: 25px;
+}
+
+#HEX,
+#DEC,
+#OCT,
+#BIN {
+    height: 25px;
+    width: 245px;
+    background-color: white;
+    text-align: left;
+    font-size: 20px;
+    padding: 0 5px;
+    float: left;
+}
+
+#topbutton {
+    height: 120px;
+    width: 310px;
+    float: left;
+    margin-top: 10px;
+}
+
+#topbutton a {
+    display: block;
+    height: 45px;
+    width: 45px;
+    line-height: 45px;
+    float: left;
+    text-decoration: none;
+    text-align: center;
+    font-size: 30px;
+    padding: 2px;
+    margin: 5px 6px;
+}
+
+#mod a {
+    font-size: 24px;
+}
